// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="quality_profiles.new_profile"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    id="create-profile-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        quality_profiles.new_profile
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-profile-name"
        >
          name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="create-profile-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-profile-language"
        >
          language
          <MandatoryFieldMarker />
        </label>
        <SelectLegacy
          clearable={false}
          id="create-profile-language"
          name="language"
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "CSS",
                "value": "css",
              },
              Object {
                "label": "JavaScript",
                "value": "js",
              },
            ]
          }
          value="css"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-profile-parent"
        >
          quality_profiles.parent
        </label>
        <SelectLegacy
          clearable={true}
          id="create-profile-parent"
          name="parentKey"
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "none",
                "value": "",
              },
              Object {
                "label": "name",
                "value": "key",
              },
            ]
          }
          value=""
        />
      </div>
      <input
        name="hello-ie11"
        type="hidden"
        value=""
      />
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="create-profile-submit"
      >
        create
      </SubmitButton>
      <ResetButtonLink
        id="create-profile-cancel"
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly: with query filter 1`] = `
<Modal
  contentLabel="quality_profiles.new_profile"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    id="create-profile-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        quality_profiles.new_profile
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-profile-name"
        >
          name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="create-profile-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-profile-language"
        >
          language
          <MandatoryFieldMarker />
        </label>
        <SelectLegacy
          clearable={false}
          id="create-profile-language"
          name="language"
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "CSS",
                "value": "css",
              },
              Object {
                "label": "JavaScript",
                "value": "js",
              },
            ]
          }
          value="js"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-profile-parent"
        >
          quality_profiles.parent
        </label>
        <SelectLegacy
          clearable={true}
          id="create-profile-parent"
          name="parentKey"
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "none",
                "value": "",
              },
              Object {
                "label": "name",
                "value": "key",
              },
            ]
          }
          value=""
        />
      </div>
      <div
        className="modal-field spacer-bottom js-importer"
        data-key="key_importer"
        key="key_importer"
      >
        <label
          htmlFor="create-profile-form-backup-key_importer"
        >
          name_importer
        </label>
        <input
          id="create-profile-form-backup-key_importer"
          name="backup_key_importer"
          type="file"
        />
        <p
          className="note"
        >
          quality_profiles.optional_configuration_file
        </p>
      </div>
      <input
        name="hello-ie11"
        type="hidden"
        value=""
      />
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="create-profile-submit"
      >
        create
      </SubmitButton>
      <ResetButtonLink
        id="create-profile-cancel"
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;
